--- a/MVC_Viajes/Views/Shared/_Layout.cshtml
+++ b/MVC_Viajes/Views/Shared/_Layout.cshtml
@@ -29,10 +29,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Viajero" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Viajeros" asp-action="Index">Viajeros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Viajero" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Viajes" asp-action="Index">Viajes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Asociaciones" asp-action="Index">Asociaciones</a>
                         </li>
                     </ul>
                 </div>
